assets/css/style.css
body {
    margin:0;
    border: none;
}



footer {
    background-color: #666666;
    border-top: solid;
    border-color:  #4aaaa5;
    Border-width: 4px;
    padding: 10px 0px 50px 0px;
    text-align: center;
    position: fixed;
    bottom: 0;
    width: 100%;

}

h1 {
    font-family: 'Georgia', 'Times', 'Times New Roman', 'serif';
    
  }
  
h2,h3,h4,h5,h6 {
    font-family: 'Georgia', 'Times', 'Times New Roman', 'serif';
  }
  
p {
    font-family: 'Arial', 'Helvetica Neue', 'Helvetica', 'sans-serif';
    
  }

.wrapper{
    background-color: #ffffff;
    border-color: #cfcece;
    border-bottom: solid;
    border-width: 1px;
    height: 90px;
    width: 100%
}

.namecontainer {
    width: 960px;
    margin: 0 auto;
    height: 100%;

}

.name {
    background-color: #4aaaa5;
    text-align: center;
    color: white;
    padding-left: 5px;
    padding-right: 5px;
    float: left;
    height: 100%;
}

.menu {
float: right;
text-align: right;
vertical-align: center;
height: 100%;
}

.bigcontainer {
    padding-top: 10px;
    padding-bottom: 20em;
    background-image: url('../images/BACKGROUND.jpg');
    background-size: cover;
    background-repeat: no-repeat;
  }

.main {
    background-color: #ffffff;
    border-color: #dddddd;
    color: #777777;
    /* margin: 0 auto; */
    width: 960px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2em;
    clear: left;
    padding-left: 5px;
    padding-right: 5px;
    padding-top: 2px;
    padding-bottom: 8em;
}

.h2container {
    border-bottom: #cccccc;
    border-bottom-style: solid;
    border-bottom-width: 3px;
    color: #4aaaa5;
    padding-left: 2em;
    padding-bottom: 5px;
    vertical-align: center;
    float: top;
}

.content {
    padding-left: 2em;
    padding-right: 2em;
    float: bottom;
    height: 100%;
}

.formcontainer {
    padding-top: 2em;
}

.gallerycontainer{
    padding-top: 2em;
    padding-left: 2em;
    padding-right: 2em;

}

.gallery {
    margin: 5px;
    border: 1px solid #ccc;
    float: left;
    width: 180px;
}
  
.gallery:hover {
    border: 1px solid #777;
}
  
.gallery img {
    width: 100%;
    height: auto;
}
  
.desc {
    padding: 15px;
    text-align: center;
}

ul.nav {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #ffffff;
    height: 100%;
  }
  
  li.nav {
    float: left;
    height: 100%;
    vertical-align: center;
  }
  
  li.nav a {
    display: block;
    color: #333;
    font-family: 'Georgia', 'Times', 'Times New Roman', 'serif';
    font-size: 15px;
    text-align: center;
    padding: 40px 16px;
    text-decoration: none;
    height: 100%;
  }
  
  li.nav a:hover {
    background-color: #ccc;
  }

  .clearfix::after {
    content: "";
    display: block;
    clear: both;
    }

.meimg {
    width: 50%; 
    height: 50%; 
    float: left; 
    padding-right: 1em; 
    padding-bottom: 1em;
}
    
@media screen and (max-width: 980px) {
  .left, .main, .right {
    width: 100%;
  }
}

@media screen and (max-width: 768px) {
    .left, .main, .right {
      width: 90%;
    }
    .footer {
        height: 50%;
    }

  }

@media screen and (max-width: 640px) {
  .left, .main, .right, .footer, .namecontainer, .name {
    width: 80%;
  }

  .wrapper{
    background-color: #ffffff;
    border-color: #cfcece;
    border-bottom: solid;
    border-width: 1px;
    height: 80px;
    width: 100%
}
  .menu {
    text-align: center;
    height: 100%;
    width: 50%;

    }

    li.nav {
        float: left;
        height: 100%;
      }
      
      li.nav a {
        display: block;
        color: #333;
        font-family: 'Georgia', 'Times', 'Times New Roman', 'serif';
        font-size: 15px;
        text-align: center;

        text-decoration: none;
        height: 100%;
      }

    .name {
        background-color: #4aaaa5;
        text-align: center;
        color: white;
        padding-left: 0px;
        padding-right: 0px;
        height: 100%;
        width: 100%;
        display: block;
    }

    .namecontainer {
        width: 100%;
        margin: 0 auto;
        height: 100%;
    
    }

  .meimg {
      width: 100%;
      display: block;    
}
}

